# image-research-assistant

./: .env.example  AGENTS.md  Makefile  README.md  pyproject.toml  uv.config.example.toml
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: bitbucket_sync.yml  codeql.yml  gitlab_sync.yml  lint.yml  release.yml  slack.yml
src/app/: main.py
src/app/clients/: __init__.py
src/app/clients/mcp/: __init__.py  agent.py  main.py
src/app/servers/vision/: server.py  tools.py
src/app/servers/wikipedia/: server.py  tools.py
