[project]
name = "image-research-assistant"
version = "0.1.0"
description = "A multimodal image research AI assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=2.8.0",
    "gradio>=6.16.0",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langchain-mcp-adapters>=0.1.14",
    "langgraph>=1.2.4",
    "mcp>=1.27.2",
    "uvicorn>=0.49.0",
    "wikipedia>=1.4.0",
]

[dependency-groups]
lint = [
    "pyrefly>=1.0.0",
    "ruff>=0.15.16",
]
