[project]
name = "image-research-assistant"
version = "0.1.0"
description = "A multimodal image research AI assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=2.10.0",
    "gradio>=6.19.0",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.9",
    "mcp>=1.28.1",
    "uvicorn>=0.49.0",
    "wikipedia>=1.4.0",
]

[dependency-groups]
lint = [
    "pyrefly>=1.1.1",
    "ruff>=0.15.20",
]
